// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OccupationGroupsDoc2csvTransform should correctly transform iscogroup OccupationGroup data to CSV for a model with a single language 1`] = `
[
  {
    "ALTLABELS_EN": "",
    "CODE": "code_0",
    "CREATEDAT": "1970-01-01T00:00:00.000Z",
    "DESCRIPTION_EN": "description_0_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "GROUPTYPE": "iscogroup",
    "ID": "000000000000000000000000",
    "ORIGINURI": "originUri_0_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "OccupationGroup_0_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "UPDATEDAT": "1970-01-01T00:00:00.000Z",
    "UUIDHISTORY": "",
  },
  {
    "ALTLABELS_EN": "altLabel_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "CODE": "code_1",
    "CREATEDAT": "1970-01-01T00:00:00.001Z",
    "DESCRIPTION_EN": "description_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "GROUPTYPE": "iscogroup",
    "ID": "000000000000000000000001",
    "ORIGINURI": "originUri_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "OccupationGroup_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "UPDATEDAT": "1970-01-01T00:00:00.001Z",
    "UUIDHISTORY": "uuid_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuid_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
  },
  {
    "ALTLABELS_EN": "",
    "CODE": "code_2",
    "CREATEDAT": "1970-01-01T00:00:00.002Z",
    "DESCRIPTION_EN": "description_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "GROUPTYPE": "iscogroup",
    "ID": "000000000000000000000002",
    "ORIGINURI": "originUri_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "OccupationGroup_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "UPDATEDAT": "1970-01-01T00:00:00.002Z",
    "UUIDHISTORY": "",
  },
  {
    "ALTLABELS_EN": "altLabel_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "CODE": "code_3",
    "CREATEDAT": "1970-01-01T00:00:00.003Z",
    "DESCRIPTION_EN": "description_3_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "GROUPTYPE": "iscogroup",
    "ID": "000000000000000000000003",
    "ORIGINURI": "originUri_3_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "OccupationGroup_3_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "UPDATEDAT": "1970-01-01T00:00:00.003Z",
    "UUIDHISTORY": "uuid_3_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuid_4_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
  },
  {
    "ALTLABELS_EN": "",
    "CODE": "code_4",
    "CREATEDAT": "1970-01-01T00:00:00.004Z",
    "DESCRIPTION_EN": "description_4_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "GROUPTYPE": "iscogroup",
    "ID": "000000000000000000000004",
    "ORIGINURI": "originUri_4_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "OccupationGroup_4_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "UPDATEDAT": "1970-01-01T00:00:00.004Z",
    "UUIDHISTORY": "",
  },
  {
    "ALTLABELS_EN": "altLabel_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "CODE": "code_5",
    "CREATEDAT": "1970-01-01T00:00:00.005Z",
    "DESCRIPTION_EN": "description_5_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "GROUPTYPE": "iscogroup",
    "ID": "000000000000000000000005",
    "ORIGINURI": "originUri_5_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "OccupationGroup_5_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "UPDATEDAT": "1970-01-01T00:00:00.005Z",
    "UUIDHISTORY": "uuid_5_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuid_6_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
  },
]
`;

exports[`OccupationGroupsDoc2csvTransform should correctly transform iscogroup OccupationGroup data to CSV for a model with a single language 2`] = `
""ID","ORIGINURI","UUIDHISTORY","CODE","GROUPTYPE","PREFERREDLABEL_EN","ALTLABELS_EN","DESCRIPTION_EN","CREATEDAT","UPDATEDAT"
"000000000000000000000000","originUri_0_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","code_0","iscogroup","OccupationGroup_0_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","description_0_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","1970-01-01T00:00:00.000Z","1970-01-01T00:00:00.000Z"
"000000000000000000000001","originUri_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","uuid_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuid_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","code_1","iscogroup","OccupationGroup_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","altLabel_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","description_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","1970-01-01T00:00:00.001Z","1970-01-01T00:00:00.001Z"
"000000000000000000000002","originUri_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","code_2","iscogroup","OccupationGroup_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","description_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","1970-01-01T00:00:00.002Z","1970-01-01T00:00:00.002Z"
"000000000000000000000003","originUri_3_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","uuid_3_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuid_4_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","code_3","iscogroup","OccupationGroup_3_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","altLabel_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","description_3_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","1970-01-01T00:00:00.003Z","1970-01-01T00:00:00.003Z"
"000000000000000000000004","originUri_4_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","code_4","iscogroup","OccupationGroup_4_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","description_4_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","1970-01-01T00:00:00.004Z","1970-01-01T00:00:00.004Z"
"000000000000000000000005","originUri_5_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","uuid_5_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuid_6_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","code_5","iscogroup","OccupationGroup_5_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","altLabel_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","description_5_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","1970-01-01T00:00:00.005Z","1970-01-01T00:00:00.005Z"
"
`;

exports[`OccupationGroupsDoc2csvTransform should correctly transform iscogroup OccupationGroup data to CSV for a model with multiple languages 1`] = `
[
  {
    "ALTLABELS_EN": "",
    "ALTLABELS_FR": "",
    "CODE": "code_0",
    "CREATEDAT": "1970-01-01T00:00:00.000Z",
    "DESCRIPTION_EN": "description_0_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "DESCRIPTION_FR": "",
    "GROUPTYPE": "iscogroup",
    "ID": "000000000000000000000000",
    "ORIGINURI": "originUri_0_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "OccupationGroup_0_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_FR": "",
    "UPDATEDAT": "1970-01-01T00:00:00.000Z",
    "UUIDHISTORY": "",
  },
  {
    "ALTLABELS_EN": "altLabel_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "ALTLABELS_FR": "fr_altLabel_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
",
    "CODE": "code_1",
    "CREATEDAT": "1970-01-01T00:00:00.001Z",
    "DESCRIPTION_EN": "description_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "DESCRIPTION_FR": "fr_description_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "GROUPTYPE": "iscogroup",
    "ID": "000000000000000000000001",
    "ORIGINURI": "originUri_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "OccupationGroup_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_FR": "fr_OccupationGroup_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "UPDATEDAT": "1970-01-01T00:00:00.001Z",
    "UUIDHISTORY": "uuid_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuid_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
  },
  {
    "ALTLABELS_EN": "",
    "ALTLABELS_FR": "",
    "CODE": "code_2",
    "CREATEDAT": "1970-01-01T00:00:00.002Z",
    "DESCRIPTION_EN": "description_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "DESCRIPTION_FR": "",
    "GROUPTYPE": "iscogroup",
    "ID": "000000000000000000000002",
    "ORIGINURI": "originUri_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "OccupationGroup_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_FR": "",
    "UPDATEDAT": "1970-01-01T00:00:00.002Z",
    "UUIDHISTORY": "",
  },
  {
    "ALTLABELS_EN": "altLabel_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "ALTLABELS_FR": "fr_altLabel_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
",
    "CODE": "code_3",
    "CREATEDAT": "1970-01-01T00:00:00.003Z",
    "DESCRIPTION_EN": "description_3_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "DESCRIPTION_FR": "fr_description_3_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "GROUPTYPE": "iscogroup",
    "ID": "000000000000000000000003",
    "ORIGINURI": "originUri_3_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "OccupationGroup_3_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_FR": "fr_OccupationGroup_3_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "UPDATEDAT": "1970-01-01T00:00:00.003Z",
    "UUIDHISTORY": "uuid_3_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuid_4_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
  },
  {
    "ALTLABELS_EN": "",
    "ALTLABELS_FR": "",
    "CODE": "code_4",
    "CREATEDAT": "1970-01-01T00:00:00.004Z",
    "DESCRIPTION_EN": "description_4_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "DESCRIPTION_FR": "",
    "GROUPTYPE": "iscogroup",
    "ID": "000000000000000000000004",
    "ORIGINURI": "originUri_4_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "OccupationGroup_4_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_FR": "",
    "UPDATEDAT": "1970-01-01T00:00:00.004Z",
    "UUIDHISTORY": "",
  },
  {
    "ALTLABELS_EN": "altLabel_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "ALTLABELS_FR": "fr_altLabel_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
",
    "CODE": "code_5",
    "CREATEDAT": "1970-01-01T00:00:00.005Z",
    "DESCRIPTION_EN": "description_5_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "DESCRIPTION_FR": "fr_description_5_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "GROUPTYPE": "iscogroup",
    "ID": "000000000000000000000005",
    "ORIGINURI": "originUri_5_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "OccupationGroup_5_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_FR": "fr_OccupationGroup_5_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "UPDATEDAT": "1970-01-01T00:00:00.005Z",
    "UUIDHISTORY": "uuid_5_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuid_6_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
  },
]
`;

exports[`OccupationGroupsDoc2csvTransform should correctly transform iscogroup OccupationGroup data to CSV for a model with multiple languages 2`] = `
""ID","ORIGINURI","UUIDHISTORY","CODE","GROUPTYPE","PREFERREDLABEL_EN","PREFERREDLABEL_FR","ALTLABELS_EN","ALTLABELS_FR","DESCRIPTION_EN","DESCRIPTION_FR","CREATEDAT","UPDATEDAT"
"000000000000000000000000","originUri_0_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","code_0","iscogroup","OccupationGroup_0_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","","","description_0_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","1970-01-01T00:00:00.000Z","1970-01-01T00:00:00.000Z"
"000000000000000000000001","originUri_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","uuid_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuid_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","code_1","iscogroup","OccupationGroup_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","fr_OccupationGroup_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","altLabel_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","fr_altLabel_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
","description_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","fr_description_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","1970-01-01T00:00:00.001Z","1970-01-01T00:00:00.001Z"
"000000000000000000000002","originUri_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","code_2","iscogroup","OccupationGroup_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","","","description_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","1970-01-01T00:00:00.002Z","1970-01-01T00:00:00.002Z"
"000000000000000000000003","originUri_3_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","uuid_3_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuid_4_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","code_3","iscogroup","OccupationGroup_3_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","fr_OccupationGroup_3_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","altLabel_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","fr_altLabel_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
","description_3_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","fr_description_3_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","1970-01-01T00:00:00.003Z","1970-01-01T00:00:00.003Z"
"000000000000000000000004","originUri_4_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","code_4","iscogroup","OccupationGroup_4_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","","","description_4_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","1970-01-01T00:00:00.004Z","1970-01-01T00:00:00.004Z"
"000000000000000000000005","originUri_5_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","uuid_5_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuid_6_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","code_5","iscogroup","OccupationGroup_5_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","fr_OccupationGroup_5_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","altLabel_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","fr_altLabel_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
","description_5_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","fr_description_5_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","1970-01-01T00:00:00.005Z","1970-01-01T00:00:00.005Z"
"
`;

exports[`OccupationGroupsDoc2csvTransform should correctly transform localgroup OccupationGroup data to CSV for a model with a single language 1`] = `
[
  {
    "ALTLABELS_EN": "",
    "CODE": "code_0",
    "CREATEDAT": "1970-01-01T00:00:00.000Z",
    "DESCRIPTION_EN": "description_0_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "GROUPTYPE": "localgroup",
    "ID": "000000000000000000000000",
    "ORIGINURI": "originUri_0_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "OccupationGroup_0_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "UPDATEDAT": "1970-01-01T00:00:00.000Z",
    "UUIDHISTORY": "",
  },
  {
    "ALTLABELS_EN": "altLabel_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "CODE": "code_1",
    "CREATEDAT": "1970-01-01T00:00:00.001Z",
    "DESCRIPTION_EN": "description_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "GROUPTYPE": "localgroup",
    "ID": "000000000000000000000001",
    "ORIGINURI": "originUri_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "OccupationGroup_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "UPDATEDAT": "1970-01-01T00:00:00.001Z",
    "UUIDHISTORY": "uuid_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuid_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
  },
  {
    "ALTLABELS_EN": "",
    "CODE": "code_2",
    "CREATEDAT": "1970-01-01T00:00:00.002Z",
    "DESCRIPTION_EN": "description_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "GROUPTYPE": "localgroup",
    "ID": "000000000000000000000002",
    "ORIGINURI": "originUri_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "OccupationGroup_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "UPDATEDAT": "1970-01-01T00:00:00.002Z",
    "UUIDHISTORY": "",
  },
  {
    "ALTLABELS_EN": "altLabel_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "CODE": "code_3",
    "CREATEDAT": "1970-01-01T00:00:00.003Z",
    "DESCRIPTION_EN": "description_3_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "GROUPTYPE": "localgroup",
    "ID": "000000000000000000000003",
    "ORIGINURI": "originUri_3_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "OccupationGroup_3_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "UPDATEDAT": "1970-01-01T00:00:00.003Z",
    "UUIDHISTORY": "uuid_3_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuid_4_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
  },
  {
    "ALTLABELS_EN": "",
    "CODE": "code_4",
    "CREATEDAT": "1970-01-01T00:00:00.004Z",
    "DESCRIPTION_EN": "description_4_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "GROUPTYPE": "localgroup",
    "ID": "000000000000000000000004",
    "ORIGINURI": "originUri_4_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "OccupationGroup_4_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "UPDATEDAT": "1970-01-01T00:00:00.004Z",
    "UUIDHISTORY": "",
  },
  {
    "ALTLABELS_EN": "altLabel_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "CODE": "code_5",
    "CREATEDAT": "1970-01-01T00:00:00.005Z",
    "DESCRIPTION_EN": "description_5_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "GROUPTYPE": "localgroup",
    "ID": "000000000000000000000005",
    "ORIGINURI": "originUri_5_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "OccupationGroup_5_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "UPDATEDAT": "1970-01-01T00:00:00.005Z",
    "UUIDHISTORY": "uuid_5_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuid_6_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
  },
]
`;

exports[`OccupationGroupsDoc2csvTransform should correctly transform localgroup OccupationGroup data to CSV for a model with a single language 2`] = `
""ID","ORIGINURI","UUIDHISTORY","CODE","GROUPTYPE","PREFERREDLABEL_EN","ALTLABELS_EN","DESCRIPTION_EN","CREATEDAT","UPDATEDAT"
"000000000000000000000000","originUri_0_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","code_0","localgroup","OccupationGroup_0_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","description_0_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","1970-01-01T00:00:00.000Z","1970-01-01T00:00:00.000Z"
"000000000000000000000001","originUri_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","uuid_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuid_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","code_1","localgroup","OccupationGroup_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","altLabel_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","description_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","1970-01-01T00:00:00.001Z","1970-01-01T00:00:00.001Z"
"000000000000000000000002","originUri_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","code_2","localgroup","OccupationGroup_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","description_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","1970-01-01T00:00:00.002Z","1970-01-01T00:00:00.002Z"
"000000000000000000000003","originUri_3_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","uuid_3_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuid_4_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","code_3","localgroup","OccupationGroup_3_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","altLabel_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","description_3_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","1970-01-01T00:00:00.003Z","1970-01-01T00:00:00.003Z"
"000000000000000000000004","originUri_4_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","code_4","localgroup","OccupationGroup_4_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","description_4_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","1970-01-01T00:00:00.004Z","1970-01-01T00:00:00.004Z"
"000000000000000000000005","originUri_5_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","uuid_5_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuid_6_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","code_5","localgroup","OccupationGroup_5_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","altLabel_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","description_5_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","1970-01-01T00:00:00.005Z","1970-01-01T00:00:00.005Z"
"
`;

exports[`OccupationGroupsDoc2csvTransform should correctly transform localgroup OccupationGroup data to CSV for a model with multiple languages 1`] = `
[
  {
    "ALTLABELS_EN": "",
    "ALTLABELS_FR": "",
    "CODE": "code_0",
    "CREATEDAT": "1970-01-01T00:00:00.000Z",
    "DESCRIPTION_EN": "description_0_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "DESCRIPTION_FR": "",
    "GROUPTYPE": "localgroup",
    "ID": "000000000000000000000000",
    "ORIGINURI": "originUri_0_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "OccupationGroup_0_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_FR": "",
    "UPDATEDAT": "1970-01-01T00:00:00.000Z",
    "UUIDHISTORY": "",
  },
  {
    "ALTLABELS_EN": "altLabel_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "ALTLABELS_FR": "fr_altLabel_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
",
    "CODE": "code_1",
    "CREATEDAT": "1970-01-01T00:00:00.001Z",
    "DESCRIPTION_EN": "description_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "DESCRIPTION_FR": "fr_description_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "GROUPTYPE": "localgroup",
    "ID": "000000000000000000000001",
    "ORIGINURI": "originUri_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "OccupationGroup_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_FR": "fr_OccupationGroup_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "UPDATEDAT": "1970-01-01T00:00:00.001Z",
    "UUIDHISTORY": "uuid_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuid_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
  },
  {
    "ALTLABELS_EN": "",
    "ALTLABELS_FR": "",
    "CODE": "code_2",
    "CREATEDAT": "1970-01-01T00:00:00.002Z",
    "DESCRIPTION_EN": "description_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "DESCRIPTION_FR": "",
    "GROUPTYPE": "localgroup",
    "ID": "000000000000000000000002",
    "ORIGINURI": "originUri_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "OccupationGroup_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_FR": "",
    "UPDATEDAT": "1970-01-01T00:00:00.002Z",
    "UUIDHISTORY": "",
  },
  {
    "ALTLABELS_EN": "altLabel_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "ALTLABELS_FR": "fr_altLabel_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
",
    "CODE": "code_3",
    "CREATEDAT": "1970-01-01T00:00:00.003Z",
    "DESCRIPTION_EN": "description_3_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "DESCRIPTION_FR": "fr_description_3_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "GROUPTYPE": "localgroup",
    "ID": "000000000000000000000003",
    "ORIGINURI": "originUri_3_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "OccupationGroup_3_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_FR": "fr_OccupationGroup_3_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "UPDATEDAT": "1970-01-01T00:00:00.003Z",
    "UUIDHISTORY": "uuid_3_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuid_4_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
  },
  {
    "ALTLABELS_EN": "",
    "ALTLABELS_FR": "",
    "CODE": "code_4",
    "CREATEDAT": "1970-01-01T00:00:00.004Z",
    "DESCRIPTION_EN": "description_4_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "DESCRIPTION_FR": "",
    "GROUPTYPE": "localgroup",
    "ID": "000000000000000000000004",
    "ORIGINURI": "originUri_4_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "OccupationGroup_4_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_FR": "",
    "UPDATEDAT": "1970-01-01T00:00:00.004Z",
    "UUIDHISTORY": "",
  },
  {
    "ALTLABELS_EN": "altLabel_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "ALTLABELS_FR": "fr_altLabel_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
",
    "CODE": "code_5",
    "CREATEDAT": "1970-01-01T00:00:00.005Z",
    "DESCRIPTION_EN": "description_5_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "DESCRIPTION_FR": "fr_description_5_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "GROUPTYPE": "localgroup",
    "ID": "000000000000000000000005",
    "ORIGINURI": "originUri_5_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "OccupationGroup_5_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_FR": "fr_OccupationGroup_5_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "UPDATEDAT": "1970-01-01T00:00:00.005Z",
    "UUIDHISTORY": "uuid_5_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuid_6_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
  },
]
`;

exports[`OccupationGroupsDoc2csvTransform should correctly transform localgroup OccupationGroup data to CSV for a model with multiple languages 2`] = `
""ID","ORIGINURI","UUIDHISTORY","CODE","GROUPTYPE","PREFERREDLABEL_EN","PREFERREDLABEL_FR","ALTLABELS_EN","ALTLABELS_FR","DESCRIPTION_EN","DESCRIPTION_FR","CREATEDAT","UPDATEDAT"
"000000000000000000000000","originUri_0_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","code_0","localgroup","OccupationGroup_0_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","","","description_0_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","1970-01-01T00:00:00.000Z","1970-01-01T00:00:00.000Z"
"000000000000000000000001","originUri_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","uuid_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuid_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","code_1","localgroup","OccupationGroup_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","fr_OccupationGroup_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","altLabel_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","fr_altLabel_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
","description_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","fr_description_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","1970-01-01T00:00:00.001Z","1970-01-01T00:00:00.001Z"
"000000000000000000000002","originUri_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","code_2","localgroup","OccupationGroup_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","","","description_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","1970-01-01T00:00:00.002Z","1970-01-01T00:00:00.002Z"
"000000000000000000000003","originUri_3_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","uuid_3_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuid_4_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","code_3","localgroup","OccupationGroup_3_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","fr_OccupationGroup_3_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","altLabel_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","fr_altLabel_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
","description_3_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","fr_description_3_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","1970-01-01T00:00:00.003Z","1970-01-01T00:00:00.003Z"
"000000000000000000000004","originUri_4_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","code_4","localgroup","OccupationGroup_4_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","","","description_4_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","1970-01-01T00:00:00.004Z","1970-01-01T00:00:00.004Z"
"000000000000000000000005","originUri_5_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","uuid_5_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuid_6_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","code_5","localgroup","OccupationGroup_5_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","fr_OccupationGroup_5_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","altLabel_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","fr_altLabel_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
","description_5_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","fr_description_5_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","1970-01-01T00:00:00.005Z","1970-01-01T00:00:00.005Z"
"
`;

exports[`OccupationGroupsDoc2csvTransform should throw an error when the groupType is unknown 1`] = `"Failed to transform OccupationGroup to CSV row: Invalid groupType: invalid"`;
